# submodularity-for-data-selection

./: README.md
bil_word_lm_bench/scripts/: tokenizer.perl
scripts/: CMakeLists.txt  ExceptableProcess.py  ExceptableThread.py  Filter.cpp  arpa2fst  arpa_entry_uniqe_test.py  arpa_syntax_checker.py  arpainfo  bnf2regex.py  c_submit.py  clean  clean_text.py  condor_clean  condor_redirect  console.py  count.make  createRNNarpa.py  create_lm  createclusteredlm.py  createpreclusteredlm.py  download_url.py  english_number_conversion.py  expand_regex.sh  file_combinations.py  files.py  filter_sentences.py  get_phonetic  guess_lm  jsgflexer.py  jsgfparser.py  limit_counts_by_dict  lm_cpp_compose.sh  lm_hitrate  mine_google.py  mine_urls.py  missing_words  most_freq_words.cpp  multisub.py  ngramCount.py  nonascii.py  (+21 more)
scripts/mitlm/: Makefile  config.status  install.sh  libmitlm.la  libtool
scripts/mitlm/.libs/: estimate-ngram  evaluate-ngram  interpolate-ngram  libmitlm-symbols.expsym  libmitlm.0.dylib  libmitlm.dylib  libmitlm.exp  libmitlm.lai
scripts/mitlm/tests/: test1.test
scripts/opengrm-ngram/src/: CMakeLists.txt
scripts/opengrm-ngram/src/lib/: CMakeLists.txt
scripts/srilm/: Makefile  install.sh
scripts/srilm/flm/src/: Dependencies.macosx
scripts/srilm/lattice/src/: Dependencies.macosx
scripts/srilm/lm/src/: Dependencies.macosx
scripts/srilm/misc/src/: Dependencies.macosx
token_mappers/: create_fst_mapper.sh  date_bnf  date_fst_template.sh  date_mapper.fst  date_mapper.osyms  date_re_test_cases  num_bnf  num_mapper.osyms  num_re_test_cases  time_bnf  time_mapper.fst  time_mapper.osyms  time_re_test_cases
